@@ -2169,6 +2169,9 @@ class Turba_Driver implements Countable
                     if (!is_array($item['params']['TYPE'])) {
                         $item['params']['TYPE'] = array($item['params']['TYPE']);
                     }
+                    foreach ($item['params']['TYPE'] as &$type) {
+                        $type = Horde_String::upper($type);
+                    }
                     // For vCard 3.0.
                     if (in_array('CELL', $item['params']['TYPE'])) {
                         if (in_array('HOME', $item['params']['TYPE']) &&
@@ -2262,6 +2265,9 @@ class Turba_Driver implements Countable
                 } elseif (isset($item['params']['TYPE'])) {
                     if (!is_array($item['params']['TYPE'])) {
                         $item['params']['TYPE'] = array($item['params']['TYPE']);
+                    }
+                    foreach ($item['params']['TYPE'] as &$type) {
+                        $type = Horde_String::upper($type);
                     }
                     if (in_array('HOME', $item['params']['TYPE']) &&
                         (!isset($hash['homeEmail']) ||
